src/objects/Account.object
<!--
  ~ Copyright (c) 2017, Salesforce.com, Inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomObject>
    <fields>
        <fullName>DeskCreatedAt__c</fullName>
        <label>Desk Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DeskId__c</fullName>
        <description>This custom field contains the Id of this record from Desk.com for historical purposes. This field should be read-only and phased out over time and removed.</description>
        <externalId>true</externalId>
        <label>Desk Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DeskUpdatedAt__c</fullName>
        <label>Desk Updated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Domains__c</fullName>
        <description>Contains the domains of this record from Desk.com for historical purposes.</description>
        <label>Domains</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>SCMT</fullName>
        <active>true</active>
        <label>SCMT</label>
    </recordTypes>
</CustomObject>